--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,25 @@ a {
   text-decoration: none;
 }
 
+.loading {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: larger;
+
+  background-color: #fff;
+}
+
+.loading.closed {
+  display: none;
+}
+
 .header-mobile {
   background-color: var(--header-bg-color);
   padding: 16px;
