--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,12 @@
+/* Base */
 :root {
   --header-bg-color: #24292e;
   --header-logo-color: #fff;
   --border-color: rgba(255, 255, 255, 0.15);
   --header-link-hover: rgb(255, 255, 255, 70%);
   --hover-text-blue: #0366D6;
+
+  --border-secondary: #e1e4e8;
 }
 
 * {
@@ -30,6 +33,8 @@ a {
   text-decoration: none;
 }
 
+/* Loading */
+
 .loading {
   position: fixed;
   top: 0;
@@ -49,6 +54,7 @@ a {
   display: none;
 }
 
+/* Mobile Header */
 .header-mobile {
   background-color: var(--header-bg-color);
   padding: 16px;
@@ -201,6 +207,7 @@ a {
   padding-left: 2px;
 }
 
+/* Desktop Header */
 .header-desk {
   background-color: var(--header-bg-color);
   padding: 16px 24px;
@@ -340,7 +347,7 @@ details summary {
   list-style: none;
   background-color: #fff;
   background-clip: padding-box;
-  border: 1px solid #e1e4e8;
+  border: 1px solid var(--border-secondary);
   border-radius: 6px;
   box-shadow: 0 8px 24px rgba(149, 157, 165, 0.2);
 }
@@ -350,7 +357,7 @@ details summary {
   display: inline-block;
   content: "";
   border: 8px solid transparent;
-  border-bottom: 8px solid #e1e4e8;
+  border-bottom: 8px solid var(--border-secondary);
   top: -16px;
   right: 9px;
   left: auto;
@@ -360,7 +367,7 @@ details summary {
   display: block;
   height: 0;
   margin: 8px 0;
-  border-top: 1px solid #e1e4e8;
+  border-top: 1px solid var(--border-secondary);
 }
 
 .details-item {
@@ -420,7 +427,7 @@ details:not([open]) > :not(summary) {
 }
 
 .status-cont {
-  border: 1px solid #e1e4e8;
+  border: 1px solid var(--border-secondary);
   margin-top: 8px;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -512,3 +519,198 @@ details:not([open]) > :not(summary) {
     padding: 0 40px;
   }
 }
+
+/* Main Content */
+.main-wrapper {
+  display: flex;
+  flex-direction: column;
+
+  padding: 0 16px;
+}
+
+@media (min-width: 768px) {
+  .main-wrapper {
+    flex-direction: row;
+    padding: 0 16px;
+  }
+}
+
+.profile {
+  margin-bottom: 24px;
+}
+
+.profile-person {
+  margin-bottom: 24px;
+  display: flex;
+  align-items: center;
+}
+
+.person-image {
+  flex-shrink: 0;
+  margin-right: 16px;
+  width: 16.66667%;
+}
+
+.person-image img {
+  border-radius: 50%;
+  border: 1px solid var(--border-secondary);
+
+  display: inline-block;
+  overflow: hidden;
+  width: 100%;
+}
+
+.image-status {
+  display: none;
+  position: relative;
+}
+
+.image-status-wrapper {
+  position: absolute;
+  bottom: 0;
+  left: 100%;
+  z-index: 2;
+  width: 38px;
+  height: 38px;
+  margin-bottom: 32px;
+  margin-left: -40px;
+
+  font-size: 14px;
+
+  background-color: #fff;
+  border: 1px solid #e1e4e8;
+  border-radius: 2em;
+  box-shadow: 0 1px 0 rgba(27,31,35,0.04);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-status-emoji {
+  line-height: 1;
+}
+
+.person-name {
+  padding: 16px 0;
+}
+
+.person-name h1 {
+  font-size: 32px;
+  font-weight: 600;
+  margin: 0 auto;
+}
+
+.person-fullname {
+  display: block;
+  font-size: 26px;
+  line-height: 1.25;
+}
+
+.person-username  {
+  display: block;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 24px;
+}
+
+.profile-status {
+  margin-bottom: 8px;
+}
+
+.person-status {
+  padding: 0;
+  margin-top: 8px;
+}
+
+@media (min-width: 768px) {
+  .profile {
+    margin-bottom: 0px;
+    padding: 0 8px;
+    width: 25%;
+  }
+
+  .profile-person {
+    margin-bottom: 0;
+    display: block;
+  }
+
+  .person-image {
+    width: 100%;
+    margin-right: 0;
+  }
+
+  .image-status {
+    display: block;
+  }
+
+  .profile-status {
+    display: none;
+  }
+}
+
+.profile-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.info-bio {
+  font-size: 16px;
+  margin-bottom: 16px;
+}
+
+.info-edit {
+  margin-bottom: 16px;
+}
+
+.btn {
+  position: relative;
+  display: inline-block;
+  padding: 5px 16px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer;
+  user-select: none;
+  border: 1px solid;
+  border-radius: 6px;
+  appearance: none;
+
+  color: #24292e;
+  background-color: #fafbfc;
+  border-color: rgb(27, 31, 35, 0.15);
+  box-shadow: 0 1px 0 rgba(27,31,35,0.04),inset 0 1px 0 hsla(0, 0%, 100%, 0.25);
+}
+
+.btn-block {
+  display: block;
+  width: 100%;
+  text-align: center;
+  appearance: button;
+}
+
+.info-follows {
+  margin-top: 8px;
+  margin-bottom: 16px;
+  order: 1;
+}
+
+.info-follows a {
+  color: #586069;
+}
+
+.info-follows a svg {
+  display: inline-block;
+  overflow: visible;
+  vertical-align: text-bottom;
+  fill: currentColor;
+}
+
+.info-follows a span {
+  font-weight: 600;
+  color: #24292e;
+}
+
